[gd_scene load_steps=10 format=3 uid="uid://2y3ar4s86yra"]

[ext_resource type="Script" uid="uid://cyayfemjl2h28" path="res://games/smash_creeps/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dp478jyugrn7o" path="res://games/smash_creeps/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://ha0ar5s2c3m4" path="res://games/smash_creeps/Mob.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://t58h5fsveya4" path="res://games/smash_creeps/Input.tscn" id="3_m7eey"]
[ext_resource type="PackedScene" uid="uid://ds37rs1bweqo4" path="res://games/smash_creeps/Output.tscn" id="4_pbsal"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(60, 2, 60)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_i5n5q"]

[sub_resource type="Curve3D" id="5"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, -15, 0, 0, 0, 0, 0, 0, -13, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, 16, 0, 0, 0, 0, 0, 0, 14, 0, -15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1")
mob_scene = ExtResource("3")
mod_id = "smash_the_creeps/creeps1"
default_input_module = ExtResource("3_m7eey")
default_output_module = ExtResource("4_pbsal")

[node name="Ground" type="StaticBody3D" parent="." groups=["floor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape3D" parent="Ground"]
shape = SubResource("1")

[node name="MeshInstance" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("2")

[node name="Walls" type="StaticBody3D" parent="."]
editor_description = "These invisible walls are used to prevent the player from escaping the playable area.

These walls use WorldBoundaryShape3D collision shapes, which are infinitely large planes
(even though they look finite in the editor)."
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 10, 11)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, -1.31134e-07, 0, 1.31134e-07, 1, 1, 4.37114e-08, -5.73206e-15, -13, 10, -4.76837e-07)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(4.37114e-08, -1, 2.18557e-07, 3.82137e-15, -2.18557e-07, -1, 1, 4.37114e-08, -5.73206e-15, 14, 10, -4.76837e-07)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 5.96046e-08, -1.42109e-14, 3.82137e-15, -2.18557e-07, -1, -5.96046e-08, 1, -2.18557e-07, 9.53674e-07, 10, -20)
shape = SubResource("WorldBoundaryShape3D_i5n5q")

[node name="Player" parent="." instance=ExtResource("2")]

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
curve = SubResource("5")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.3711346e-08, 0, 0.999999, 0, 1, 0, -0.999999, 0, -4.3711346e-08, 14, 0, -15)
rotation_mode = 1
cubic_interp = false
loop = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Mobs" type="Node3D" parent="."]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
